14/01/2024 - 2
==============
DOS prevention by using remote ip connection threshold.

14/01/2024 - 1
==============
Changes to test scripts so that it runs 100*50 wget requests for 7mb static image and p3 plugin post execution
Changes to server to run in static file server mode, where threadmanager, plugins and dynamic pages are disabled, operates like thttpd mode.
Added testloopplugup.sh for multipart form post test
Added testloop3types.sh for multipart form post test
Made changes to shrink logic, hopefully for the better.
Added logic for connection acceptance throttling, required as static files are handled by mainthread and dynamic pages are handled by thread pool cause much havoc.
Added changes to increase open fds rlimit.


13/01/2024 - 3
==============
Cleanup of makefile
Changes to the paths
Changes to makefile , addition of distclean, install, installclean
By default installs to /tmp/httpd/
ServerName+version displayed in logs and http response is github url converted to a string that replaces '/' with '_'
Changes to testloop.sh url so that the test script works properly


13/01/2024 - 2
==============
Cleanup of makefile
Testing pthreads and cpp11threads
Testing with -O2 flag


13/01/2024 - 1
==============
Added support for removal of post temporary file, Should be removed from plugins. Multipart read has to be end-user implementation.
Added support for large file upload through POST multipart.
Changed all the file offset from int to size_t for 64bit support
Code cleanup.


12/01/2024
==========
Added support for heirarchical users
Added support for static htmls 
Added support for static html that's sent if user authentication is valid
Added support for static html on a per user basis
Added support for login plugin
Added support for a simple interface for a embedded device


21/03/2021
==========
Removal of upnp and md5
Addition of rand_reentrant as a replacement of rand_r (which is not present on msys64) [copied from bsd version of source]