@@ -1,4 +1,5 @@
 #!/bin/bash
 
 export LD_LIBRARY_PATH=`pwd`/../lib/
-./httpdsrv 15000 10
+# httpdsrv port  thresds  dosthreshold
+./httpdsrv 15000 10 100
